--- a/02 -  Dominando o ASP.NET CORE MVC/DEMO/Demos VIEW/DemoMVC/DemoMVC/Views/Home/Index.cshtml
+++ b/02 -  Dominando o ASP.NET CORE MVC/DEMO/Demos VIEW/DemoMVC/DemoMVC/Views/Home/Index.cshtml
@@ -6,6 +6,8 @@
 
 @*@@await Html.PartialAsync("_AvisoGeral")*@ 
 
+<vc:Carrinho></vc:Carrinho>
+
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
     <ol class="carousel-indicators">
