--- a/02 -  Dominando o ASP.NET CORE MVC/DEMO/Demos VIEW/DemoMVC/DemoMVC/Views/Shared/_Layout.cshtml
+++ b/02 -  Dominando o ASP.NET CORE MVC/DEMO/Demos VIEW/DemoMVC/DemoMVC/Views/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                 </ul>
+                <vc:Carrinho></vc:Carrinho>
             </div>
         </div>
     </nav>
@@ -45,6 +46,7 @@
         <hr />
         <footer>
             <p>&copy; 2021 - DemoMVC</p>
+            <vc:Carrinho></vc:Carrinho>
         </footer>
     </div>
 
