--- a/Projetos/AppModelo/src/Dev-Assuncao.AppSite/Views/Shared/_Layout.cshtml
+++ b/Projetos/AppModelo/src/Dev-Assuncao.AppSite/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
 
     <environment include="Development">
         <script src="~/js/site_bundle.min.js"></script>
-        <script src="~/lib/bootstrap/js/bootstrap.js"></script>
+        <script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"
