Working with custom taghelpers

--- a/Projetos/AppModelo/src/Dev-Assuncao.AppSite/Views/Shared/_Layout.cshtml
+++ b/Projetos/AppModelo/src/Dev-Assuncao.AppSite/Views/Shared/_Layout.cshtml
@@ -48,7 +48,9 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">Rodapé</div>
+        <div class="container">
+            dev-assunção - <email> contato </email>
+        </div>
     </footer>
 
 
