--- a/Projetos/AppModelo/src/Dev-Assuncao.AppSite/Views/Shared/_Layout.cshtml
+++ b/Projetos/AppModelo/src/Dev-Assuncao.AppSite/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
     <title> @ViewData["Title"] - Minha App Modelo </title>
 
     <environment include="Development">
-        <link href="~/css/site.css" rel="stylesheet" />
+        <link href="~/css/site_bundle.min.css"   rel="stylesheet" />
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css"
@@ -14,8 +14,8 @@
         <link href="~/css/site.css" rel="stylesheet" />
     </environment>
 
-    <link rel="stylesheet" href="~/lib/font-awesome/css/font-awesome.css" />
 
+    <link rel="stylesheet" href="~/lib/font-awesome/css/font-awesome.css" />
 </head>
 
 
